--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 .accordion {
+    margin-bottom: 50px;
+    border-radius: 5px;
+    box-shadow: 0px 3px 6px 1px rgba(0,0,0,0.16);
+}
+
+.accordion-items {
     width: 500px;
     margin: 0 auto;
 }
@@ -7,14 +13,28 @@
     margin: 0;
     padding: 10px;
     display: block;
-    background: #333;
-    color: #FFF;
-    border-top: 1px solid #fff;
+    background: #1A1F36;
+    color: #F6F8FF;
+    border-bottom: 1px solid #00C9A7;
+    border-top: 1px solid #FF6200;
+    font-family: Arial, sans-serif;
+    font-weight: 500;
+    transition: background 0.3s, color 0.3s;
+    cursor: pointer;
+}
+
+.accordion-trigger:hover {
+    background: #FF6200;
+    color: #1A1F36;
 }
 
 .accordion-contents{
     margin: 0;
-    padding: 10px;
+    padding: 20px;
+    background: #F6F8FF;
     border: 1px solid #ccc;
     display: none;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    font-family: Arial, sans-serif;
 }
